--- a/2024/styles.css
+++ b/2024/styles.css
@@ -8,3 +8,9 @@
     border-radius: 0.5rem; /* Border radius */
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5); /* Box shadow */
 }
+.ref {
+    /* font-weight: bold; */
+    /* font-style: italic; */
+    font-size: 0.5em;
+    color: gray;
+  }
